# patagonia

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  MAINTAINERS.md  README.md  SECURITY.md  cli.py  makefile  pyproject.toml  skills-lock.json
app/: graph.py  main.py  settings.py
app/agents/: __init__.py  executor.py  planner.py  summary.py
app/tools/: __init__.py  add_firewall_rule.py  add_user_to_security_group.py  apply_terraform_plan.py  common.py  configure_autoscaling.py  create_dns_record.py  create_kubernetes_namespace.py  create_load_balancer.py  create_log_retention_policy.py  create_monitoring_alert.py  create_postgres_database.py  create_redis_cache.py  create_s3_bucket.py  create_service_account.py  deploy_container_service.py  enable_vpn_access.py  grant_iam_role.py  purge_cdn_cache.py  restart_service.py  restore_database_backup.py  rotate_secret.py  run_database_backup.py  run_health_check.py  scale_kubernetes_deployment.py  update_container_image.py  validate_resource_exists.py
web/: package-lock.json  package.json  starwind.config.json
web/src/pages/: index.astro
web/src/styles/: starwind.css
