[project]
name = "patagonia"
version = "1.0.0"
author = "Luka Cerrutti <lukacerrutti2002@gmail.com>"
description = "IT Patagonia GenAI test"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "pydantic-settings>=2.14.1",
    "typer>=0.26.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
